# Galactous

./: .gitignore  CMakeLists.txt  Cahier des charges.txt  Diagramme.asta  Makefile  README.md  build.ninja  imgui.ini
include/: ComputeShader.hpp  Galaxy.hpp  Input.hpp  Octree.hpp  Particle.hpp  Simulation.hpp  forward.hpp  imconfig.h  types.hpp
include/affichage/: Camera.hpp  PointRenderer.hpp  Window.hpp
include/display/: BloomRenderer.hpp  Camera.hpp  Mat4.hpp  Page.hpp  PointRenderer.hpp  Renderer.hpp  Window.hpp
include/simulation/: FlattenedOctree.hpp  GPUOctree.h  Galaxy.hpp  GalaxyFactory.hpp  Octree.hpp  Particle.hpp  ParticlesData.hpp  Simulation.hpp  forward.hpp
shaders/: galaxy.vert
shaders/compute/: computeShader.cl  galaxy.frag
src/: ComputeShader.cpp  Galaxy.cpp  Input.cpp  Octree.cpp  Particle.cpp  Simulation.cpp  test.txt  types.cpp
src/affichage/: PointRenderer.cpp
src/display/: Camera.cpp  Page.cpp  PointRenderer.cpp  Renderer.cpp  Window.cpp
src/main/: main.cpp
src/simulation/: Galaxy.cpp  GalaxyFactory.cpp  Octree.cpp  Particle.cpp  Simulation.cpp
